static/css/tln.css
/* ... */
.digits-filter-navbar a.selected { line-height: 0.55; }


/* Top Navigation Bar
   ========================================================================== */

#top-nav-h {
    margin: 40px 0;
    padding-top: 5px; }
#top-nav-h .nav-separator-sub {
    height: 30px;
    border-right: 1px solid #a57100;
    margin-top: -2px; }

@media (min-width: 900px) {
#top-nav-h .nav-separator {
    height: 30px;
    border-right: 1px solid #a57100;
    margin-top: -2px; }
#top-nav-h li > a { padding: 0 60px; } }

@media (max-width: 900px) {
#top-nav-h { padding-right: 3px; flex-direction: column; }
#top-nav-h #top-nav1,
#top-nav-h #top-nav2 { width: 100%; }
#top-nav-h li { width: 100%; max-width: 230px; }
#top-nav-h li:first-child { float: right; margin-right: 1px; }
#top-nav-h li:last-child { float: left; }
#top-nav-h li:first-child > a { float: right; padding-right: 22%; }
#top-nav-h li:last-child > a { float: left; padding-left: 22%; } }

#top-nav-h a { font-size: 56px; transition: color 0.4s ease, opacity 0.4s ease; }
#top-nav-h span { transition: all 0.4s ease; }

.dropdown { position: relative; }
.dropdown-content {
    z-index: 200;
    visibility: hidden;
    opacity: 0;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: center;
    justify-content: center;
    transform: translateY(-14px);
    transition: all 0.4s ease-in-out 0s;
    -ms-flex-direction: column;
    flex-direction: column;
    position: absolute;
    width: 94%;
    left: 3.4%;
    margin-top: 4px;
    background-color: rgba(0, 5, 61, 0.85);
    box-shadow: 0 0 6px 3px rgba(0, 5, 61, 0.9); }
@media (max-width: 900px) {
.dropdown-content { width: 82%; top: 100%; } }
.dropdown-content a {
    font-size: 46px !important;
    margin-top: -1px;
    padding-bottom: 1px;
    line-height: 1.1 !important;
    color: #f8f8f8; }
.dropdown-content a:first-child { margin-top: -3px; }
.dropdown-content a:last-child { margin-bottom: -2px; }
.dropdown-content a:hover { color: #f7a300; }
.dropdown:hover .dropdown-content {
    visibility: visible;
    opacity: 1;
    transform: translateY(-4px); }
.dropdown-content .dropdown-separator {
    margin: 0 20px;
    border-bottom: solid 1px #d0d0d0;
    height: 0; }


/* IE/Edge Fix
   ========================================================================== */
/* Sometimes there may be a 1px gap between the element border and its shadow
 * This seems to be due to arcane antialiasing computations and odd/even numbers... */

@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) { /* targets IE 10/11 */
.shadow-right { position: absolute; height: 100%; right: -1px; border-right: solid 1px rgba(0, 5, 61, 0.7); }
.shadow-left { position: absolute; height: 100%; left: -1px; border-right: solid 1px rgba(0, 5, 61, 0.7); } }
@supports (-ms-ime-align:auto) { /* targets Edge 12+ */
.shadow-up { position: absolute; width: 100%; top: -1px; border-bottom: solid 1px rgba(0, 5, 61, 0.7); }
.shadow-right { position: absolute; height: 100%; right: -1px; border-right: solid 1px rgba(0, 5, 61, 0.7); }
.shadow-down { position: absolute; width: 100%; bottom: -1px; border-bottom: solid 1px rgba(0, 5, 61, 0.7); }
.shadow-left { position: absolute; height: 100%; left: -1px; border-right: solid 1px rgba(0, 5, 61, 0.7); } }


/* ==========================================================================
/* Entries Display
/* ========================================================================== */

/* Entry Previews
   ========================================================================== */

.entry-links {
    padding: 0 20px;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    -ms-flex-align: center;
    align-items: center; }

.entry-link {
    margin: 6px 0;
    padding: 10px;
    border: 1px solid #d3d4db;
    width: 100%;
    max-height: 210px;
    background-color: #fffddb;
    color: black !important;
    box-shadow: 0 0 8px 0 rgba(0, 13, 181, 0.2);
    display: -ms-flexbox;
    display: flex;
    transition: all 0.4s ease; }
.entry-link:hover {
    box-shadow: 0 0 12px 0 rgba(0, 13, 181, 0.7); }

.entry-link .hentry {
    -ms-flex: 1;
    flex: 1;
    overflow: hidden;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column; }
.entry-link .hentry .entry-content {
    max-height: 108px;
    display: block;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 4;
    position: relative;
    padding: 0 !important;
    overflow: hidden;
    text-overflow: ellipsis; }
.entry-link .hentry .entry-content:after {
    display: block;
    position: absolute;
    top: 81px;
    left: 20%;
    width: 80%;
    height: 27px;
    content: "";
    text-align: right;
    background: linear-gradient(to right, rgba(255, 253, 219, 0), rgba(255, 253, 219, 1) 85%); }
@supports (-webkit-line-clamp: 1) {
.entry-link .hentry .entry-content:after { display: none; } }


/* Entry Header
   ========================================================================== */

.entry-title {
    font-weight: bold;
    text-align: center; }
.entry .entry-title {
    padding: 44px 8px 32px 0;
    font-size: 40px; }
.entry-list .entry-title {
    padding: 8px 0;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-family: AlegreyaSans, "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    font-size: 26px; }
@supports (-moz-appearance:meterbar) { /* targets Firefox 16+ */
.entry-list .entry-title { letter-spacing: -1px; } }
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) { /* targets IE 10/11 */
.entry-list .entry-title {
    letter-spacing: -1px;
    font-family: AlegreyaSansBold, AlegreyaSans, "Lucida Sans Unicode", "Lucida Grande", sans-serif; } }
/* ... */

